--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -10,10 +10,11 @@
 .cards > ul > li {
   border: 1px solid #dadada;
   background-color: var(--background-color);
+;
 }
 
 .cards .cards-card-body {
-  margin: 16px;
+  margin: 17px;
 }
 
 .cards .cards-card-image {
