--- a/blocks/compare/compare.css
+++ b/blocks/compare/compare.css
@@ -45,7 +45,7 @@
   width: 100%;
   height: auto;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgb(0 0 0 / 10%);
 }
 
 .compare .compare-left .compare-text,
